# Slabware

./: .gitignore  SoundSlab.edid  build.sbt  devenv.sh  fusesoc.conf  slabware.core  vexriscv.cfg  zynq_config.yml
bitstreams/: slabware_zynq_2024JUNE10.bit
blinktest/: .gitignore  Makefile  vexriscv.cfg
data/: SlabVideo.xdc  (+1 more)
fw/: Cargo.toml  Embed.toml
fw/.cargo/: config.toml
fw/slab-pac/: .gitignore  Cargo.toml  Makefile.toml  device.x  slabware.svd
fw/slab-pac/src/: grid_ctrl.rs  hdmi.rs  hdmi_rx.rs  i2c.rs  i2c0.rs  lcd_dim.rs  leds.rs  lib.rs  mi2c.rs  si2c.rs  timer.rs  usb_ctrl.rs
fw/slab-pac/src/grid_ctrl/: col0key_state.rs  col10key_state.rs  col11key_state.rs  col12key_state.rs  col13key_state.rs  col14key_state.rs  col15key_state.rs  col16key_state.rs  col17key_state.rs  col1key_state.rs  col2key_state.rs  col3key_state.rs  col4key_state.rs  col5key_state.rs  col6key_state.rs  col7key_state.rs  col8key_state.rs  col9key_state.rs  control.rs  scan_rate.rs
fw/slab-pac/src/hdmi/: channel0.rs  clk_det_count.rs  clk_det_divisor.rs  clk_det_sample_rate.rs  control.rs  status.rs
fw/slab-pac/src/hdmi_rx/: channel1.rs  channel2.rs  clk_det_tolerance.rs  interrupt_enable.rs  status.rs
fw/slab-pac/src/i2c/: master_status.rs  rx_ack.rs  rx_data.rs  sampling_clock_divider.rs  t_buf.rs  t_high.rs  t_low.rs  timeout.rs  tsu_data.rs  tx_ack.rs  tx_data.rs
fw/slab-pac/src/i2c0/: master_status.rs  rx_ack.rs  slave_override.rs  tbuf.rs  thigh.rs  tlow.rs  tx_ack.rs
fw/slab-pac/src/lcd_dim/: duty.rs  period.rs
fw/slab-pac/src/lcddim/: control.rs
fw/slab-pac/src/leds/: ctrl.rs  data.rs
fw/slab-pac/src/mi2c/: interrupt.rs  master_status.rs  rx_ack.rs  rx_data.rs  sampling_clock_divider.rs  slave_status.rs  timeout.rs  tlow.rs  tsu_data.rs  tx_ack.rs  tx_data.rs
fw/slab-pac/src/si2c/: address_filter0.rs  interrupt.rs  rx_data.rs
fw/slab-pac/src/timer/: compare0.rs  compare1.rs  control.rs  counter.rs  interrupt_mask.rs  interrupt_status.rs  prescale.rs
fw/slab-pac/src/usb_ctrl/: address.rs  config.rs  frame.rs  halt.rs  info_reg.rs  interrupt.rs  interrupt_enable.rs
fw/slabware/: Cargo.toml  Embed.toml  Makefile.toml  vexriscv.yaml
fw/slabware/.cargo/: config.toml
fw/slabware/src/: custom_int.rs  edid.rs  i2c.rs  main.rs  mi2c.rs  sealed_instance.rs  si2c.rs  time_driver.rs  usb_driver.rs  usb_keys.rs
fw/slabware/src/video/: hdmi.rs  mod.rs  tmds181.rs
fw/src/: main.rs
(+48 files in other folders)
