[package]
name = "slabware"
authors = ["Craig Bishop <craig@craigjb.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slabware"
test = false
doctest = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.12.2"

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = 'fat'
debug-assertions = false
incremental = false
opt-level = 3
