[package]
name = "slabware"
authors = ["Craig Bishop <craig@craigjb.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slabware"
test = false
doctest = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1.1.2"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.0", features = [
  "arch-riscv32",
  "defmt",
  "executor-thread",
  "integrated-timers",
  "task-arena-size-512",
] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-time-driver = "0.1.0"
embedded-hal-async = "1.0.0"
panic-halt = "0.2.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.12.2", features = ["single-hart"] }
slab-pac = { path = "../slab-pac", features = ["rt", "critical-section"] }

[profile.release]
codegen-units = 1        # better optimizations
debug = 2                # symbols are nice and they don't increase the size on Flash
lto = 'fat'
debug-assertions = false
incremental = false
opt-level = 2
